Fixes bug with long names on small screens

--- a/app/_scss/pages/projects.scss
+++ b/app/_scss/pages/projects.scss
@@ -160,7 +160,9 @@
 
 			figcaption {
 				font-size: 1rem;
-				width: 4em !important;
+				width: 5em !important;
+				position: relative;
+				left: -0.5em;
 			}
 
 			a {
